# hippos

./: .gitignore  MANIFEST.in  NPM_RELEASE.md  README.md  README.zh-CN.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/hippocampus/: __init__.py
src/hippocampus/cli/: __init__.py  __main__.py
src/hippos/: __init__.py  architecture_rules.py  constants.py  context_summary.py  paths.py  resources.py  source_filter.py  tag_vocab.py  user_llm_config.py  utils.py
src/hippos/_vendor/: __init__.py
src/hippos/api/: __init__.py  support.py
src/hippos/cli/: __init__.py  commands_project_bootstrap.py  commands_structure_prompt.py  pipeline_command_builders.py  query.py  snapshot.py
src/hippos/config/: __init__.py  merge_support.py
src/hippos/llm/: __init__.py  (+4 more)
tests/: benchmark_trim.sh  conftest.py  incremental_cache_helpers.py  scoring_query_fixtures.py  test_aider_contract.py  test_architec_metrics.py  test_architect_tool_split.py  test_bundle_state.py  test_cli_core_commands.py  test_cli_integration.py  test_cli_pipeline_helpers.py  test_comprehensive_navigation.py  test_config.py  test_diff.py  test_hippocampus_package_boundaries.py  test_incremental_cache_hashes.py  test_incremental_cache_phase2.py  test_incremental_cache_phase3.py  test_index_gen_phase1_runner.py  test_index_gen_reporting.py  test_install_resources.py  test_install_script.py  test_llm_transport.py  test_llm_validators.py  test_llmgateway_runtime.py  test_navigate_helpers.py  test_navigate_snippets.py  test_parsers.py  test_path_validation.py  test_prompt_loader.py  test_prompt_propagation.py  test_public_api.py  test_ranker_fallback.py  test_repomap_snippets.py  test_scoring_queries.py  test_scoring_roles.py  test_search.py  test_sig_extract.py  test_snapshot.py  test_source_filter.py  (+12 more)
(+50 files in other folders)
